--- a/index.html
+++ b/index.html
@@ -153,5 +153,9 @@
     <hr>
     <div class="foot-p">
     <p class="foot-text">Contact Us</p><p class="foot-text">Terms And Conditions</p><p class="foot-text">Privacy Policy</p><p class="foot-text">Privacy Settings </p><p class="foot-text">Goal Live</p></div>
+    <div class="facebook-icon">
+        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter-square"></i></a>
+    </div>
 </footer>
 </html>
