--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
                 <div class="left-box">
                     <a class="up-match uab-text"><h3>Upcoming Match</h3></a>
                     <a class="all-grp"><h3>All Group</h3></a>
-                    <a class="BlogT"><h3>Blog</h3></a>
+                    <a class="BlogT" href="index.html"><h3>Blog</h3></a>
     
                 </div>
 
@@ -125,5 +125,9 @@
     <hr>
     <div class="foot-p">
     <p class="foot-text">Contact Us</p><p class="foot-text">Terms And Conditions</p><p class="foot-text">Privacy Policy</p><p class="foot-text">Privacy Settings </p><p class="foot-text">Goal Live</p></div>
+    <div class="facebook-icon">
+        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
+        <a href="https://twitter.com/i/flow/login"><i class="fa-brands fa-twitter-square"></i></a>
+    </div>
 </footer>
 </html>
